5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1596_842.log
== TEST (2019-03-22 20:07:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("Digite o numero: "))
primeiro_algarismo = numero // 1000
segundo algarismo = numero % 1000 - numero // 100
terceiro_algarismo = ((numero % 1000) % 100) // 10
quarto_algarismo = (((numero % 1000) % 100) % 10)
print(primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo)

-- ERROR:
File "XXXX", line 6
    segundo algarismo = numero % 1000 - numero // 100
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:08:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("Digite o numero: "))
primeiro_algarismo = numero // 1000
segundo_algarismo = numero % 1000 - numero // 100
terceiro_algarismo = ((numero % 1000) % 100) // 10
quarto_algarismo = (((numero % 1000) % 100) % 10)
print(primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo)

-- OUTPUT:
101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:10:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("Digite o numero: "))
primeiro_algarismo = numero // 1000
segundo_algarismo = numero % 1000 - numero // 100
terceiro_algarismo = ((numero % 1000) % 100) // 10
quarto_algarismo = (((numero % 1000) % 100) % 10)
soma_algarismos = primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)

-- OUTPUT:
101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:12:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("Digite o numero: "))
primeiro_algarismo = numero // 1000
segundo_algarismo = (numero % 1000) // 100
terceiro_algarismo = ((numero % 1000) % 100) // 10
quarto_algarismo = (((numero % 1000) % 100) % 10)
soma_algarismos = primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:12:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("Digite o numero: "))
primeiro_algarismo = numero // 1000
segundo_algarismo = (numero % 1000) // 100
terceiro_algarismo = ((numero % 1000) % 100) // 10
quarto_algarismo = (((numero % 1000) % 100) % 10)
soma_algarismos = primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:13:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("Digite o numero: "))
primeiro_algarismo = numero // 1000
segundo_algarismo = (numero % 1000) // 100
terceiro_algarismo = ((numero % 1000) % 100) // 10
quarto_algarismo = (((numero % 1000) % 100) % 10)
soma_algarismos = primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)

-- EXECUTION TIME:
0.187175
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:22:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("Digite um numero de 4 algarismos: "))
primeiro_algarismo = numero // 1000
segundo_algarismo = (numero % 1000) // 100
terceiro_algarismo = ((numero % 1000) % 100) // 10
quarto_algarismo = (((numero % 1000) % 100) % 10)
soma_algarismos = primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:22:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("Digite um numero de 4 algarismos: "))
primeiro_algarismo = numero // 1000
segundo_algarismo = (numero % 1000) // 100
terceiro_algarismo = ((numero % 1000) % 100) // 10
quarto_algarismo = (((numero % 1000) % 100) % 10)
soma_algarismos = primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(soma_algarismos)

-- EXECUTION TIME:
0.155285
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
